# kde-weather

./: .gitignore  CLAUDE.md  HANDOFF.md  install.sh  issues.md  kde-weather.desktop  pyproject.toml
docs/superpowers/plans/: 2026-06-12-noaa-day-detail.md
docs/superpowers/specs/: 2026-06-12-noaa-day-detail-design.md
packaging/: PKGBUILD
src/kde_weather/: main.py
src/kde_weather/backend/: app_controller.py  settings.py
src/kde_weather/backend/api/: nws.py  open_meteo.py  worker.py
src/kde_weather/backend/models/: current_conditions.py  daily_model.py  day_detail.py  geocode_model.py  hourly_model.py  location_model.py
src/kde_weather/qml/: main.qml
src/kde_weather/qml/components/: CurrentConditions.qml  DayCard.qml  DayDetailPanel.qml  LocationSearchBar.qml  WeatherChart.qml  WeatherIcon.qml
src/kde_weather/qml/theme/: Theme.qml
src/kde_weather/qml/views/: DailyView.qml  HourlyView.qml  SettingsView.qml
tests/: test_day_detail.py  test_nws_parsing.py  test_thread_shutdown.py
